unix/lang/tests/error/import_error_line_number_after.yab
#expect#---Error in import_error_line_number_after.yab, line 7: syntax error
#expect#   this does not compute :-/
#expect#        ^~~~
#expect#---Error: Program not executed

import library2e
this does not compute :-/
